# vulkano

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  NOTES.md  README.md  build_log.txt  build_log2.txt  build_log3.txt  build_log4.txt  code_task.txt  imgui.ini  mac_run_stderr.txt  mac_run_stderr_after_dynamic.txt  output.md  output.txt  run_log.txt
.agent/: FUTURE.md  TODO.md  TODO.nd  generate_metal_normal.py  importer_test_assets.json  last_bin_ls.txt  last_build.txt  last_cmake_config.txt  last_ctest.txt  last_ctest_ssao_step1.txt  last_ctest_ssao_step2.txt  last_ctest_ssao_step3.txt  last_ctest_ssao_step4.txt  last_ctest_ssao_step5.txt  last_ctest_ssao_validation.txt  last_run_stderr.txt  last_run_stdout.txt  plan.md  plan_assimp.md  plan_assimp_embedded_textures.md  plan_git_identity_rewrite.md  plan_imgui_docking.md  plan_imgui_layout_enhancements.md  plan_imgui_viewport_embed.md  plan_light_gizmos_shadows.md  plan_lighting.md  plan_mesh_grouping.md  plan_metallic_occlusion.md  plan_object_transforms.md  plan_object_visibility.md  plan_pr_merge_develop.md  plan_rotation_audit.md  plan_rotation_fix.md  plan_scene_hierarchy.md  plan_shadows.md  plan_ssao_alignment.md  plan_texture_path_resolution.md  plan_uv_channel_audit.md  plan_uv_padding.md  plan_uv_sampling.md  (+17 more)
app/: CMakeLists.txt  main.cpp
assets/: README.md
build-codex/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
build-codex2/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
build-codex2-debug/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
build-debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  (+2 more)
include/: CMakeLists.txt  imgui_layer.hpp  vulkan_app.hpp
include/vulkan_app/: application.hpp  camera.hpp  icosphere.hpp  imgui_layer.hpp  renderer.hpp  types.hpp
include/vulkano/: app.hpp  app_config.hpp  application.hpp  buffer.hpp  camera.hpp  camera_math.hpp  cascaded_shadow_map.hpp  command_allocator.hpp  config.hpp  depth_resources.hpp  framebuffers.hpp  geometry.hpp  glfw_context.hpp  graphics_pipeline.hpp  icosphere.hpp  imgui_layer.hpp  imgui_overlay.hpp  mesh.hpp  mesh_gpu.hpp  primitives.hpp  procedural_textures.hpp  render_pass.hpp  shadow_map.hpp  shadow_pipeline.hpp  shadow_render_pass.hpp  ssao.hpp  stats.hpp  swapchain.hpp  synchronization.hpp  texture.hpp  texture_types.hpp  textures.hpp  vertex.hpp  vulkan_context.hpp  window.hpp
include/vulkano/app/: application.hpp  asset_importer.hpp  camera.hpp  camera_controller.hpp  frame_resources.hpp  glfw_library.hpp  gpu_vertex.hpp  imgui_renderer.hpp  light_buffer.hpp  light_gpu.hpp  material_buffer.hpp  material_gpu.hpp  material_surface.hpp  material_texture_cache.hpp  math.hpp  mesh_packing.hpp  scene_renderer.hpp  shadow_map.hpp  shadow_pass.hpp  shadow_resources.hpp  ssao.hpp  texture_image.hpp  texture_loader.hpp  triangle_renderer.hpp  vulkan_context.hpp  window.hpp
include/vulkano/scene/: light.hpp  material.hpp  mesh.hpp  transform.hpp
include/vulkano/utils/: fps.hpp
include/vulkano/vk/: color_image.hpp  depth_format.hpp  depth_image.hpp  instance.hpp  logical_device.hpp  physical_device.hpp  swapchain.hpp
include/vulkano_codex/: app.hpp  imgui_layer.hpp  utils.hpp
src/: CMakeLists.txt  app.cpp  app_config.cpp  application.cpp  buffer.cpp  camera.cpp  camera_math.cpp  cascaded_shadow_map.cpp  command_allocator.cpp  config.cpp  depth_resources.cpp  framebuffers.cpp  geometry.cpp  glfw_context.cpp  graphics_pipeline.cpp  icosphere.cpp  imgui_layer.cpp  imgui_overlay.cpp  main.cpp  mesh_gpu.cpp  primitives.cpp  procedural_textures.cpp  render_pass.cpp  renderer.cpp  shaders.cpp  shadow_map.cpp  shadow_pipeline.cpp  shadow_render_pass.cpp  ssao.cpp  stats.cpp  stb_image.cpp  stb_image_impl.cpp  swapchain.cpp  synchronization.cpp  texture.cpp  textures.cpp  utils.cpp  vertex.cpp  vulkan_app.cpp  vulkan_context.cpp  (+1 more)
src/app/: application.cpp  asset_importer.cpp  camera.cpp  camera_controller.cpp  frame_resources.cpp  glfw_library.cpp  imgui_renderer.cpp  light_buffer.cpp  light_gpu.cpp  material_buffer.cpp  material_gpu.cpp  material_texture_cache.cpp  math.cpp  mesh_packing.cpp  scene_renderer.cpp  shadow_map.cpp  shadow_pass.cpp  ssao.cpp  texture_image.cpp  texture_loader.cpp  triangle_renderer.cpp  vulkan_context.cpp  window.cpp
src/scene/: light.cpp  material.cpp  mesh.cpp  transform.cpp
src/utils/: fps.cpp
src/vk/: color_image.cpp  depth_format.cpp  depth_image.cpp  instance.cpp  logical_device.cpp  physical_device.cpp  swapchain.cpp
tests/: CMakeLists.txt  asset_importer_tests.cpp  camera_tests.cpp  depth_format_tests.cpp  fps_smoother_tests.cpp  fps_smoothing.cpp  fps_tests.cpp  geometry_tests.cpp  headless_app_tests.cpp  icosphere_tests.cpp  light_gpu_tests.cpp  light_registry_tests.cpp  material_gpu_tests.cpp  material_registry_tests.cpp  mesh_packing_tests.cpp  primitive_state_tests.cpp  renderer_constants_tests.cpp  sanity.cpp  sanity_tests.cpp  scene_graph_tests.cpp  shadow_resources_tests.cpp  ssao_samples_tests.cpp  ssao_tests.cpp  stats_tests.cpp  tests_main.cpp  texture_loader_tests.cpp  textures_tests.cpp  timing_tests.cpp  transform_tests.cpp  triangle_transforms_tests.cpp
tests/assets/: embedded_triangle.gltf  hello_triangle.mtl  uv_triangle.mtl
tests/integration/: application_smoke_tests.cpp
tests/unit/: app_config_tests.cpp  camera_math_tests.cpp  camera_tests.cpp  primitives_tests.cpp  procedural_textures_tests.cpp  shadow_mapping_tests.cpp  shadow_math_tests.cpp  texture_tests.cpp  vertex_tests.cpp
vulkano/: .clang-format  .clang-tidy  CMakeLists.txt  README.md
vulkano/include/vulkano/: app.hpp  camera.hpp  icosphere.hpp  imgui_layer.hpp  mesh.hpp  renderer.hpp  swapchain.hpp  types.hpp  vulkan_context.hpp
vulkano/src/: app.cpp  camera.cpp  icosphere.cpp  imgui_layer.cpp  main.cpp  mesh.cpp  renderer.cpp  swapchain.cpp  vulkan_context.cpp
vulkano/tests/: CMakeLists.txt  icosphere_tests.cpp  tests_main.cpp
(+98 files in other folders)
