add_library(vulkano_headers INTERFACE)

target_sources(vulkano_headers
    INTERFACE
        FILE_SET HEADERS
        BASE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}
        FILES
            vulkano/app.hpp
            vulkano/window.hpp
            vulkano/mesh.hpp
            vulkano/icosphere.hpp
            vulkano/vulkan_context.hpp
)

target_include_directories(vulkano_headers INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
